Simplified query/sort in projects list Added role to projects Added will-change to prevent flickering

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -1,4 +1,5 @@
 #header {
+  will-change: padding position background;
   position: relative;
   top: 0;
   width: 100%;
